parser/tests/cases/snapshots/cases__errors__module_bad_stmt.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: failed to parse module
  ┌─ module_bad_stmt:1:1
  │
1 │ if x:
  │ ^^ unexpected token
  │
  = Note: expected import, contract, struct, type, or event


